syntax = "proto3";

package golem.component;

import "golem/common/uuid.proto";

message ComponentId {
  golem.common.UUID value = 1;
}
